--- a/custom_components/dominion_energy/manifest.json
+++ b/custom_components/dominion_energy/manifest.json
@@ -9,5 +9,5 @@
   "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/walljm/dominionpower/issues",
-  "requirements": ["aiohttp>=3.8.0"]
+  "requirements": ["aiohttp>=3.8.0", "selenium>=4.0.0", "selenium-wire>=5.1.0", "webdriver-manager>=4.0.0"]
 }
